padding change to front page 'main' css to fix scrolling issue on firefox

--- a/assets/src/front-page/style.css
+++ b/assets/src/front-page/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 main {
-    padding: 7rem 5%;
+    padding: 7rem 5% 14rem;
     overflow-y: auto;
 }
 
